Update print statement from 'Hello' to 'Goodbye'

--- a/dashboard.html
+++ b/dashboard.html
@@ -2829,6 +2829,10 @@
       position: relative;
     }
 
+    .search-box .form-control {
+      padding-left: 42px;
+    }
+
     .search-input {
       width: 100%;
       padding: 12px 16px 12px 45px;
@@ -9233,4 +9237,5 @@ S pozdravem
 </body>
 
 </html>
+
 
