--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
             margin: 0 auto;
             border: 1px solid rgba(255, 255, 255, 0.1);
             font-family: 'Inter', sans-serif;
+            text-align: left;
         }
 
         .dashboard-window:hover {
@@ -236,6 +237,28 @@
             align-items: center;
             gap: 20px;
             margin-bottom: 10px;
+        }
+
+        .hamburger-menu {
+            display: none;
+            width: 40px;
+            height: 40px;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
+            color: white;
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 12px;
+            margin-right: auto;
+        }
+
+        .hamburger-menu:hover {
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        .hamburger-menu svg {
+            width: 24px;
+            height: 24px;
         }
 
         .notification-bell {
@@ -479,22 +502,18 @@
             color: #94a3b8;
         }
 
-        @media (max-width: 1000px) {
+        @media (max-width: 1024px) {
             .preview-layout {
-                grid-template-columns: 80px 1fr;
+                grid-template-columns: 1fr;
+                height: auto;
             }
 
-            .preview-nav-item span {
+            .preview-sidebar {
                 display: none;
             }
 
-            .preview-nav-item {
-                justify-content: center;
-                padding: 14px;
-            }
-
-            .preview-nav-item.active {
-                border-left: none;
+            .hamburger-menu {
+                display: flex;
             }
 
             .preview-stats-row {
@@ -516,12 +535,86 @@
                 display: none;
             }
 
+            .preview-main {
+                padding: 12px;
+                gap: 20px;
+            }
+
+            .preview-topbar {
+                gap: 12px;
+                justify-content: space-between;
+                margin-bottom: 5px;
+            }
+
+            .hamburger-menu {
+                width: 36px;
+                height: 36px;
+                background: rgba(255, 255, 255, 0.08);
+            }
+
             .preview-stats-row {
-                grid-template-columns: 1fr;
+                grid-template-columns: 1fr 1fr;
+                gap: 10px;
+            }
+
+            .preview-stat-card {
+                padding: 12px;
+                height: auto;
+                min-height: 110px;
+            }
+
+            .stat-header {
+                margin-bottom: 8px;
+            }
+
+            .stat-title {
+                font-size: 0.8rem;
+                line-height: 1.2;
+            }
+
+            .stat-icon {
+                width: 32px;
+                height: 32px;
+                font-size: 1rem;
+                flex-shrink: 0;
+            }
+
+            .stat-value {
+                font-size: 1.5rem;
+                margin-bottom: 2px;
+            }
+
+            .stat-trend {
+                font-size: 0.75rem;
+            }
+
+            .email-list-container {
+                padding: 0;
+                background: transparent;
+            }
+
+            .preview-email-item {
+                padding: 12px 16px;
+                gap: 12px;
+                background: #393a5b;
+                margin-bottom: 8px;
             }
 
             .email-meta {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                min-width: fit-content;
+            }
+
+            .email-meta span:last-child {
                 display: none;
+            }
+
+            /* Enable scrolling if grid overflows screen width too much, though 1fr 1fr should fit */
+            /* But if we really want to be safe with very small screens: */
+            .preview-main {
+                overflow-x: hidden;
             }
         }
 
@@ -579,8 +672,65 @@
             transition: width 0.3s ease;
         }
 
-        .nav-links a:hover::after {
-            width: 100%;
+        .mobile-menu-toggle {
+            display: none;
+            cursor: pointer;
+            color: white;
+            padding: 10px;
+        }
+
+        .mobile-menu-toggle svg {
+            width: 30px;
+            height: 30px;
+        }
+
+        .nav-links.active {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            right: 0;
+            background: rgba(42, 43, 69, 0.95);
+            backdrop-filter: blur(20px);
+            padding: 2rem;
+            gap: 1.5rem;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            animation: slideDown 0.3s ease-out;
+        }
+
+        @keyframes slideDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .nav-links {
+                display: none;
+            }
+
+            .mobile-menu-toggle {
+                display: block;
+            }
+
+            nav {
+                padding: 0.8rem 1.5rem;
+            }
+
+            .logo-img-wrapper img {
+                height: 40px;
+            }
+
+            .logo {
+                font-size: 1.1rem;
+            }
         }
 
         .hero {
@@ -1010,6 +1160,14 @@
                     </div>
                     AI EMAILOVÝ AGENT
                 </a>
+                <div class="mobile-menu-toggle">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                        stroke-linejoin="round">
+                        <line x1="3" y1="12" x2="21" y2="12"></line>
+                        <line x1="3" y1="6" x2="21" y2="6"></line>
+                        <line x1="3" y1="18" x2="21" y2="18"></line>
+                    </svg>
+                </div>
                 <ul class="nav-links">
                     <li><a href="#features">Funkce</a></li>
                     <li><a href="#how-it-works">Jak to funguje</a></li>
@@ -1091,6 +1249,14 @@
                             <!-- Main Content -->
                             <div class="preview-main">
                                 <div class="preview-topbar">
+                                    <div class="hamburger-menu">
+                                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+                                            stroke-linecap="round" stroke-linejoin="round">
+                                            <line x1="3" y1="12" x2="21" y2="12"></line>
+                                            <line x1="3" y1="6" x2="21" y2="6"></line>
+                                            <line x1="3" y1="18" x2="21" y2="18"></line>
+                                        </svg>
+                                    </div>
                                     <div class="notification-bell">
                                         <svg viewBox="0 0 24 24" fill="currentColor" stroke="none"
                                             style="width:20px;height:20px;">
@@ -1491,9 +1657,21 @@
                         behavior: 'smooth',
                         block: 'start'
                     });
+                    // Close mobile menu if open
+                    document.querySelector('.nav-links').classList.remove('active');
                 }
             });
         });
+
+        // Mobile Menu Toggle
+        const mobileMenuToggle = document.querySelector('.mobile-menu-toggle');
+        const navLinks = document.querySelector('.nav-links');
+
+        if (mobileMenuToggle && navLinks) {
+            mobileMenuToggle.addEventListener('click', () => {
+                navLinks.classList.toggle('active');
+            });
+        }
 
         // Fade in animation on scroll
         const observerOptions = {
