Update print statement from 'Hello' to 'Goodbye'

--- a/login.html
+++ b/login.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Začít zdarma - AI Emailový Agent</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+        window.BACKEND = 'http://localhost:3000';
+    </script>
     <style>
         * {
             margin: 0;
@@ -706,10 +709,13 @@
         }
 
         /* Responsive */
-        @media (max-width: 768px) {
+        /* Responsive */
+        @media (max-width: 1024px) {
             .signup-container {
                 grid-template-columns: 1fr;
-                gap: 2rem;
+                gap: 3rem;
+                max-width: 600px;
+                margin: 0 auto;
             }
 
             .signup-info {
@@ -718,12 +724,26 @@
             }
 
             .signup-info h1 {
-                font-size: 2rem;
+                font-size: 2.5rem;
+            }
+
+            .benefits {
+                display: inline-block;
+                text-align: left;
             }
 
             .signup-form-container {
                 order: 1;
-                padding: 2rem;
+            }
+        }
+
+        @media (max-width: 640px) {
+            .signup-form-container {
+                padding: 2rem 1.5rem;
+            }
+
+            .signup-info h1 {
+                font-size: 2rem;
             }
 
             .oauth-buttons {
@@ -738,6 +758,40 @@
             .btn-secondary {
                 margin-right: 0;
                 width: 100%;
+                margin-bottom: 0.5rem;
+            }
+
+            .btn-primary {
+                width: 100%;
+            }
+
+            .logo-img-wrapper img {
+                height: 50px;
+            }
+
+            .logo {
+                font-size: 1.2rem;
+            }
+
+            /* Compact steps for mobile */
+            .signup-steps {
+                margin-bottom: 1.5rem;
+            }
+
+            .step-number {
+                width: 24px;
+                height: 24px;
+                font-size: 0.75rem;
+                margin-right: 0.25rem;
+            }
+
+            .step {
+                font-size: 0.8rem;
+            }
+
+            .step:not(:last-child)::after {
+                width: 20px;
+                margin: 0 0.5rem;
             }
         }
 
@@ -769,7 +823,7 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <a href="index.html" class="logo">
+                <a href="#" class="logo">
                     <div class="logo-img-wrapper">
                         <img src="logo-Agent.png" alt="AI Agent Logo">
                     </div>
@@ -952,19 +1006,6 @@
     </main>
 
     <script>
-        // === BACKEND BASE ===
-        window.BACKEND = window.BACKEND || 'https://ai-email-server-stejdesign.onrender.com';
-
-        async function parseJsonResponse(response) {
-            const text = await response.text();
-            if (!text) return null;
-            try {
-                return JSON.parse(text);
-            } catch (err) {
-                throw new Error('Server vrátil neplatnou odpověď.');
-            }
-        }
-
         // === GOOGLE SIGN-IN ===
         window.onload = function () {
             google.accounts.id.initialize({
@@ -979,18 +1020,15 @@
 
         function handleCredentialResponse(response) {
             const id_token = response.credential;
-           startLoading();
+            startLoading();
             fetch(`${window.BACKEND}/api/auth/google`, {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify({ token: id_token }),
             })
-                .then(async (r) => {
-                    const data = await parseJsonResponse(r);
-                    return { ok: r.ok, data };
-                })
-                .then(({ ok, data }) => {
-                    if (!ok || !data?.success) throw new Error(data?.message || 'Ověření selhalo.');
+                .then(r => r.json())
+                .then(data => {
+                    if (!data.success) throw new Error(data.message || 'Ověření selhalo.');
                     localStorage.setItem('userName', data.user.name);
                     localStorage.setItem('userEmail', data.user.email);
                     localStorage.setItem('userRole', data.user.role);
@@ -1066,16 +1104,16 @@
             if (!ok) return;
 
             startLoading(step1Btn);
-           try {
+            try {
                 const r = await fetch(`${window.BACKEND}/api/auth/register`, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ fullName, email, password })
                 });
-                const data = await parseJsonResponse(r);
-                if (!r.ok || !data?.success) throw new Error(data?.message || 'Registrace selhala.');
+                const data = await r.json();
+                if (!r.ok || !data.success) throw new Error(data.message || 'Registrace selhala.');
 
-              localStorage.setItem('userName', data.user.name);
+                localStorage.setItem('userName', data.user.name);
                 localStorage.setItem('userEmail', data.user.email);
                 window.location.href = 'dashboard.html';
             } catch (err) {
@@ -1103,8 +1141,8 @@
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({ email, password })
                 });
-                const data = await parseJsonResponse(r);
-                if (!r.ok || !data?.success) throw new Error(data?.message || 'Přihlášení selhalo.');
+                const data = await r.json();
+                if (!r.ok || !data.success) throw new Error(data.message || 'Přihlášení selhalo.');
 
                 localStorage.setItem('userName', data.user.name);
                 localStorage.setItem('userEmail', data.user.email);
@@ -1135,5 +1173,3 @@
 </body>
 
 </html>
-
-
