--- a/login.html
+++ b/login.html
@@ -823,7 +823,7 @@
     <header class="header">
         <div class="container">
             <div class="header-content">
-                <a href="#" class="logo">
+                <a href="index.html" class="logo">
                     <div class="logo-img-wrapper">
                         <img src="logo-Agent.png" alt="AI Agent Logo">
                     </div>
@@ -1173,3 +1173,4 @@
 </body>
 
 </html>
+
