Update fmt.Println to print 'Goodbye World'

--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <title>Začít zdarma - AI Emailový Agent</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script>
-        window.BACKEND = 'http://localhost:3000';
+        window.BACKEND = 'https://ai-email-server-stejdesign.onrender.com';
     </script>
     <style>
         * {
@@ -1173,4 +1173,5 @@
 </body>
 
 </html>
+
 
