Update print statement from 'Hello' to 'Goodbye'

--- a/dashboard.html
+++ b/dashboard.html
@@ -2304,6 +2304,7 @@
       top: 20px;
       right: 20px;
       background: white;
+      color: #1e293b;
       border-left: 4px solid #16a34a;
       padding: 1rem 1.5rem;
       border-radius: 8px;
@@ -2827,10 +2828,6 @@
     .search-box {
       flex: 1;
       position: relative;
-    }
-
-    .search-box .form-control {
-      padding-left: 42px;
     }
 
     .search-input {
@@ -3517,7 +3514,9 @@
             <img src="logo-Agent.png" alt="Logo" style="width: 100%; height: auto;">
           </div>
         </div>
-
+        <button class="collapse-btn" id="collapseBtn">
+          <span>←</span>
+        </button>
       </div>
 
       <nav>
@@ -9237,5 +9236,3 @@ S pozdravem
 </body>
 
 </html>
-
-
