--- a/dashboard.html
+++ b/dashboard.html
@@ -3788,7 +3788,8 @@
             </div>
             <div class="filter-row">
               <select class="form-control" id="status-filter">
-                <option value="unread">📥 Doručená pošta</option>
+                <option value="all">📥 Doručená pošta</option>
+                <option value="unread">📧 Nepřečtené</option>
                 <option value="approval">⏳ Čekající</option>
               </select>
               <select class="form-control" id="period-filter">
