--- a/dashboard.html
+++ b/dashboard.html
@@ -3661,7 +3661,7 @@
                 </div>
               </div>
 
-              <div class="stat-card">␊
+              <div class="stat-card">
                 <div class="stat-header">
                   <span class="stat-title">Ušetřený čas</span>
                   <span class="stat-icon" style="display: flex; align-items: center; justify-content: center;">
@@ -9371,4 +9371,5 @@ S pozdravem
 </body>
 
 </html>
+
 
